<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonBuiltInCameraView"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/menu_camera_view" />

    <Button
        android:id="@+id/buttonImageAnalyzer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/menu_image_analyzer" />

    <Button
        android:id="@+id/buttonImageCapture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/menu_image_capture" />

    <Button
        android:id="@+id/buttonAdvanceImageCapture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/menu_advance_image_capture" />

</LinearLayout>