<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CameraViewActivity">

    <androidx.camera.view.CameraView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:captureMode="mixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lensFacing="back"
        app:pinchToZoomEnabled="false" />

    <Button
        android:id="@+id/buttonCaptureImage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:drawableTop="@drawable/ic_camera_action"
        android:text="@string/capture_image"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/buttonRecordVideo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRecordVideo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:drawableTop="@drawable/ic_camera_action"
        android:text="@string/start_record_video"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCaptureImage" />

    <Button
        android:id="@+id/buttonToggleCamera"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:drawableTop="@drawable/ic_switch_camera"
        android:text="@string/switch_camera"
        android:textAllCaps="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>